--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,6 +12,11 @@
   <% end %>
 
   <div>
+    <%= form.label :featured_image, style: "display: block" %>
+    <%= form.file_field :featured_image, accept: "image/*" %>
+  </div>
+
+  <div>
     <%= form.label :name, style: "display: block" %>
     <%= form.text_field :name %>
   </div>
