notification realtime flash message broadcast using solid_queue using ActionCable

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,8 @@
       <%= button_to "Log out", session_path, method: :delete if authenticated? %>
     </nav>
 
+    <%= render 'layouts/notifications' %>
+
     <main>
       <%= yield %>
     </main>
