--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,21 @@
   </head>
 
   <body>
-    <nav class="bg-gray-800 text-white p-4 flex items-center">
-      <div class="flex space-x-4">
-        <%= link_to "Home", root_path, class: "hover:text-gray-300" %>
-        <%= button_to "Log out", session_path, method: :delete, class: "hover:text-gray-300", if: authenticated? %>
+    <nav class="bg-gray-800 text-white p-4">
+      <div class="container mx-auto">
+        <div class="flex items-center space-x-4">
+          <%= link_to "Home", root_path, class: "hover:text-gray-300" %>
+          <%= link_to "About Us", about_path, class: "hover:text-gray-300" %>
+          <%= link_to "Contact", contact_path, class: "hover:text-gray-300" %>
+          <%= link_to "Services", services_path, class: "hover:text-gray-300" %>
+          <% if authenticated? %>
+            <%= link_to "Log out", session_path, 
+                data: { turbo_method: :delete },
+                class: "hover:text-gray-300" %>
+          <% else %>
+            <%= link_to "Sign In", new_session_path, class: "hover:text-gray-300" %>
+          <% end %>
+        </div>
       </div>
     </nav>
 
