--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,14 +1,31 @@
-<p style="color: green"><%= notice %></p>
+<%# Notification message styled with Tailwind %>
+<% if notice %>
+  <p class="bg-green-100 text-green-700 border border-green-300 p-4 rounded mb-4"><%= notice %></p>
+<% end %>
 
-<%= render @product %>
+<%# Product rendering %>
+<div class="bg-white shadow-md rounded-lg p-6 mb-6">
+  <%= render @product %>
 
-<p><%= @product.description %></p>
+  <p class="text-gray-700 text-lg mt-4"><%= @product.description %></p>
 
-<%= image_tag @product.featured_image if @product.featured_image.attached? %>
+  <%# Featured image with Tailwind styling %>
+  <% if @product.featured_image.attached? %>
+    <div class="mt-4">
+      <%= image_tag @product.featured_image, class: "rounded-lg shadow-md max-w-full" %>
+    </div>
+  <% end %>
+</div>
 
-<div>
-  <%= link_to "Edit this product", edit_product_path(@product) %> |
-  <%= link_to "Back to products", products_path %>
-
-  <%= button_to "Destroy this product", @product, method: :delete, data: { turbo_confirm: "Are you sure?" } %>
+<%# Links and buttons styled with Tailwind %>
+<div class="flex space-x-4 mt-6">
+  <%= link_to "Edit this product", edit_product_path(@product), 
+      class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
+  
+  <%= link_to "Back to products", products_path, 
+      class: "bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded" %>
+  
+  <%= button_to "Destroy this product", @product, method: :delete, 
+      data: { turbo_confirm: "Are you sure?" }, 
+      class: "bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded" %>
 </div>
