--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,13 +1,18 @@
-<p style="color: green"><%= notice %></p>
+<%# Notice Message %>
+<% if notice %>
+  <p class="bg-green-100 text-green-700 border border-green-300 p-4 rounded mb-4"><%= notice %></p>
+<% end %>
 
+<%# Page Title %>
 <% content_for :title, "Products" %>
 
-<h1>Products</h1>
+<h1 class="text-2xl font-bold text-gray-800 mb-6">Products</h1>
 
-<table id="products" border="1">
-  <thead>
+<%# Products Table %>
+<table id="products" class="min-w-full bg-white border border-gray-200 shadow-md rounded-lg">
+  <thead class="bg-gray-100">
     <tr>
-      <th>Name</th>
+      <th class="py-3 px-6 text-left text-sm font-medium text-gray-600">Name</th>
     </tr>
   </thead>
 
@@ -18,4 +23,8 @@
   </tbody>  
 </table>
 
-<%= link_to "New product", new_product_path %>
+<%# New Product Link %>
+<div class="mt-6">
+  <%= link_to "New product", new_product_path, 
+      class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded shadow" %>
+</div>
