--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,11 +1,13 @@
-<% content_for :title, "New product" %>
+<% content_for :title, "New Product" %>
 
-<h1>New product</h1>
+<h1 class="text-2xl font-bold text-gray-800 mb-4">New Product</h1>
 
-<%= render "form", product: @product %>
+<div class="bg-white p-6 rounded-lg shadow-md">
+  <%= render "form", product: @product %>
+</div>
 
 <br>
 
 <div>
-  <%= link_to "Back to products", products_path %>
+  <%= link_to "Back to Products", products_path, class: "text-blue-500 hover:underline" %>
 </div>
