new link added for react rendering

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
           <%= link_to "About Us", "#", class: "hover:text-gray-300 text-lg" %>
           <%= link_to "Contact", "#", class: "hover:text-gray-300 text-lg" %>
           <%= link_to "Services", "#", class: "hover:text-gray-300 text-lg" %>
+          <%= link_to "ReactPage", home_path, class: "hover:text-gray-300 text-lg" %>
           <% if authenticated? %>
             <%= link_to "Log out", session_path, 
                 data: { turbo_method: :delete },
