categories crud created using Hotwire Turbo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
           <%= link_to "About Us", "#", class: "hover:text-gray-300 text-lg" %>
           <%= link_to "Contact", "#", class: "hover:text-gray-300 text-lg" %>
           <%= link_to "Stocks", products_path, class: "hover:text-gray-300 text-lg" %>
+          <%= link_to "Categories", categories_path, class: "hover:text-gray-300 text-lg" %>
           <%= link_to "Inventory Dashboard", home_path, class: "hover:text-gray-300 text-lg" %>
           <% if authenticated? %>
             <%= link_to "Log out", session_path, 
